style: prevent button text wrapping in pulse detail header
(cherry picked from commit 41ede56f55fe1bd648ce9a3da6f184722b09656a)

--- a/src/app/pulses/pulse-detail/elements/pulse-detail-header/pulse-detail-header.component.scss
+++ b/src/app/pulses/pulse-detail/elements/pulse-detail-header/pulse-detail-header.component.scss
@@ -67,6 +67,8 @@
   align-items: center;
 
   button[mat-flat-button] {
+    white-space: nowrap;
+
     mat-spinner {
       display: inline-block;
       margin-right: 8px;
